[gd_scene load_steps=10 format=3 uid="uid://cxokga3rf1npw"]

[ext_resource type="Script" path="res://ui/fishing/end_of_round/caught_fish_entry.gd" id="1_oe0ij"]
[ext_resource type="Texture2D" uid="uid://ypjb8q06wddw" path="res://assets/images/tangibles/fish/little_foot.png" id="2_2vjcl"]
[ext_resource type="FontFile" uid="uid://b64dje4lthqhc" path="res://assets/ui/fonts/SofiaSans-Regular.ttf" id="2_n866u"]
[ext_resource type="FontFile" uid="uid://cfpsweqcl1tc2" path="res://assets/ui/fonts/SofiaSans-Bold.ttf" id="3_af8a8"]
[ext_resource type="PackedScene" uid="uid://dylt13u1epmmo" path="res://ui/fishing/end_of_round/tetro_pill.tscn" id="4_o3lsu"]
[ext_resource type="FontFile" uid="uid://dli8qphds5c1r" path="res://assets/ui/fonts/SofiaSansExtraCondensed-BoldItalic.ttf" id="4_rafdx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxfvb"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wyasp"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.419608, 0.419608, 0.419608, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_82b1k"]
content_margin_left = 8.0
content_margin_top = 2.0
content_margin_right = 8.0
content_margin_bottom = 2.0
bg_color = Color(1, 0.647059, 0, 1)
skew = Vector2(-0.275, 0.189)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CaughtFishEntry" type="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
offset_right = 529.0
offset_bottom = 192.0
script = ExtResource("1_oe0ij")
myImage = ExtResource("2_2vjcl")
myName = ""
totalCaught = 0
currentCaught = 0

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_top = 33.0
offset_right = 125.0
offset_bottom = 158.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_pxfvb")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
custom_minimum_size = Vector2(125, 125)
offset_right = 125.0
offset_bottom = 125.0
texture = ExtResource("2_2vjcl")
ignore_texture_size = true
stretch_mode = 5

[node name="SessionCaughtContainer" type="MarginContainer" parent="PanelContainer"]
offset_left = 52.0
offset_top = 73.0
offset_right = 125.0
offset_bottom = 125.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/SessionCaughtContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 63.0
offset_bottom = 42.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wyasp")

[node name="SessionCaught" type="Label" parent="PanelContainer/SessionCaughtContainer/PanelContainer"]
offset_left = 10.0
offset_top = 5.0
offset_right = 43.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("2_n866u")
theme_override_font_sizes/font_size = 15
text = "x950"

[node name="NewLabelContainer" type="MarginContainer" parent="PanelContainer"]
visible = false
offset_right = 44.0
offset_bottom = 28.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = -10
theme_override_constants/margin_top = -10

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/NewLabelContainer"]
offset_left = -10.0
offset_top = -10.0
offset_right = 44.0
offset_bottom = 28.0
theme_override_styles/panel = SubResource("StyleBoxFlat_82b1k")

[node name="NewLabel" type="Label" parent="PanelContainer/NewLabelContainer/PanelContainer"]
offset_left = 8.0
offset_top = 2.0
offset_right = 46.0
offset_bottom = 36.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("4_rafdx")
theme_override_font_sizes/font_size = 25
text = "New!
"

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 129.0
offset_right = 529.0
offset_bottom = 192.0
size_flags_horizontal = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_left = 25.0
offset_top = 50.0
offset_right = 375.0
offset_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_right = 350.0
offset_bottom = 19.0

[node name="NameLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
clip_contents = false
offset_right = 146.0
offset_bottom = 19.0
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("2_n866u")
theme_override_font_sizes/normal_font_size = 15
text = "Name"
fit_content_height = true
scroll_active = false
autowrap_mode = 0

[node name="TotalCaughtLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
offset_left = 150.0
offset_right = 350.0
offset_bottom = 19.0
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_fonts/normal_font = ExtResource("2_n866u")
theme_override_font_sizes/normal_font_size = 15
text = "Total Caught"
fit_content_height = true
scroll_active = false
autowrap_mode = 0
text_direction = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_top = 23.0
offset_right = 350.0
offset_bottom = 59.0

[node name="Name" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
clip_contents = false
offset_right = 146.0
offset_bottom = 36.0
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("3_af8a8")
theme_override_font_sizes/normal_font_size = 30
text = "SPURDY DON"
fit_content_height = true
scroll_active = false
autowrap_mode = 0

[node name="TotalCaught" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
offset_left = 150.0
offset_right = 350.0
offset_bottom = 36.0
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_fonts/normal_font = ExtResource("2_n866u")
theme_override_font_sizes/normal_font_size = 30
text = "10,056"
fit_content_height = true
scroll_active = false
autowrap_mode = 0
text_direction = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
offset_top = 63.0
offset_right = 350.0
offset_bottom = 68.0
theme_override_constants/separation = 5

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_left = 234.0
offset_top = 72.0
offset_right = 350.0
offset_bottom = 91.0
size_flags_horizontal = 8

[node name="TetroPill" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("4_o3lsu")]
offset_right = 36.0
offset_bottom = 19.0
tetroName = "Square"
tetroAmount = 3

[node name="TetroPill2" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("4_o3lsu")]
offset_left = 40.0
offset_right = 76.0
offset_bottom = 19.0
tetroName = "Line"
tetroAmount = 400

[node name="TetroPill3" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("4_o3lsu")]
offset_left = 80.0
offset_right = 116.0
offset_bottom = 19.0
tetroName = "Absolutelddd"
tetroAmount = 43
